--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.27",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.6",
+    "polished": "^3.6.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "rebass": "^4.0.7",
+    "reflexbox": "^4.0.6"
   }
 }
