push latest work

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop & (cd client && yarn dev)",
+    "dev": "strapi develop & (cd client && yarn dev)",
     "start": "strapi start & (cd client && yarn start)",
     "build": "strapi build & (cd client && next build)",
     "strapi": "strapi"
