--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
     "isomorphic-unfetch": "^3.0.0",
